# score-parser

./: CHANGELOG.md  README.md  score-parser.cabal  staff-parser.cabal
app/: Main.hs  Template.hs
app/Domain/: Clef.hs  PropertyStmt.hs  Score.hs  System.hs
samples/: basic.staff  empty_system.staff  indexx.html  metadata_only.staff
