cabal-version:      2.4
name:               score-parser
version:            0.1.0.0

author:             alvaro.carmona
maintainer:         alvaro.carmona@vivaair.com

extra-source-files: CHANGELOG.md

executable score-parser
    main-is:          Main.hs

    build-depends: base ^>=4.14.3.0
                 , text ^>=1.2.4.1
                 , data-default ^>=0.7.1.1
                 , megaparsec ^>=9.2.1
                 , blaze-html ^>=0.9.1.2
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules: Template
                   Domain.Clef
                   Domain.PropertyStmt
                   Domain.Score
                   Domain.System
